--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1.0.55"
-async-std = {version = "1.6.0", features = ["attributes"]}
-sqlx = {version = "0.5.11", features = ["macros", "runtime-tokio-native-tls", "postgres", "chrono", "json"]}
+async-std = {version = "1.10.0", features = ["attributes"]}
+dotenv = "0.15.0"
+sqlx = {version = "0.5.11", features = ["runtime-async-std-rustls", "postgres", "chrono", "json"]}
 tokio = {version = "1.17.0", features = ["full"]}
